# zen-tools

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  index.html  mise.toml  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: pr.yml  publish-npm.yml  release.yml
apps/zen-tools-npm/: README.md  package.json
apps/zen-tools-npm/lib/: download.js  install-macos.js  install-windows.js  paths.js  release.js  uninstall-macos.js  uninstall-windows.js  windows-registry.js
crates/ghostty-rs/: Cargo.toml
crates/ghostty-rs/src/: app.rs  callbacks.rs  config.rs  error.rs  lib.rs  view.rs
crates/ghostty-sys/: Cargo.toml  build.rs
crates/ghostty-sys/examples/: link_smoke.rs
crates/ghostty-sys/src/: lib.rs
crates/tauri-plugin-ghostty/: Cargo.toml  build.rs
crates/tauri-plugin-ghostty/permissions/: default.toml
crates/tauri-plugin-ghostty/permissions/autogenerated/: reference.md
crates/tauri-plugin-ghostty/permissions/autogenerated/commands/: terminal_focus_split.toml  terminal_new.toml  terminal_set_color_scheme.toml  terminal_split.toml
crates/tauri-plugin-ghostty/permissions/schemas/: schema.json
crates/tauri-plugin-ghostty/src/: GhosttyHostView.h  GhosttyHostView.m  commands.rs  lib.rs  macos.rs  state.rs  stub.rs
crates/zen-ai-cli/: Cargo.toml
crates/zen-ai-cli/src/: lib.rs
crates/zen-apple-speech/: Cargo.toml  build.rs
crates/zen-apple-speech/src/: lib.rs
crates/zen-apple-speech/swift/: AppleSpeechBridge.swift
crates/zen-cleaner/: Cargo.toml
crates/zen-cleaner/src/: deletion.rs  dto.rs  git.rs  lib.rs  tree.rs
crates/zen-db/: Cargo.toml
crates/zen-db/src/: driver.rs  lib.rs  locks.rs  mssql.rs  postgres.rs  registry.rs  schema_cache.rs  secrets.rs  sql.rs  types.rs
crates/zen-dictation/: Cargo.toml
crates/zen-dictation/src/: error.rs  lib.rs  manager.rs  models.rs  provider.rs  transcriber.rs  transcript.rs
crates/zen-dictation/src/download/: mod.rs
crates/zen-dictation/src/hotkey/: macos.rs  mod.rs
crates/zen-dictation/src/mic/: mod.rs
crates/zen-dictation/src/paste/: macos.rs  mod.rs
crates/zen-fs/: Cargo.toml
crates/zen-fs/src/: lib.rs
crates/zen-git/: Cargo.toml
crates/zen-git/src/: conflict.rs  diff.rs  error.rs  lib.rs  log.rs  merge_ops.rs  merge_state.rs  repos.rs  shell.rs
crates/zen-git/src/models/: commit.rs  filter.rs  merge.rs  mod.rs  repo.rs
crates/zen-github/: Cargo.toml
crates/zen-github/src/: call_log.rs  client.rs  error.rs  lib.rs
crates/zen-github/src/models/: auth.rs  author.rs  check.rs  conversation.rs  diff.rs  issue_comment.rs  mod.rs  pull_request.rs  repository.rs  review.rs  review_comment.rs
crates/zen-http/: Cargo.toml
crates/zen-http/examples/: resolve_chain.rs
crates/zen-http/src/: dependency.rs  error.rs  executor.rs  lib.rs  registry.rs  variable.rs
crates/zen-parser/: Cargo.toml
crates/zen-parser/examples/: check_deps.rs
crates/zen-parser/src/: env_file.rs  error.rs  http_file.rs  lib.rs  perf_config.rs  variables.rs
crates/zen-perf/: Cargo.toml
crates/zen-perf/src/: assertion.rs  error.rs  export.rs  lib.rs  metrics.rs  runner.rs  stop.rs
crates/zen-pr-review/: Cargo.toml
crates/zen-pr-review/src/: error.rs  events.rs  lib.rs  persist.rs  prompt.rs  runner.rs  state.rs  worktree.rs
crates/zen-prmaster/: Cargo.toml
crates/zen-prmaster/src/: filters.rs  lib.rs  notifications.rs  paths.rs  settings.rs  summary.rs
crates/zen-process-monitor/: Cargo.toml
crates/zen-process-monitor/src/: lib.rs  sampler.rs
crates/zen-process-monitor/src/proc/: cpu.rs  mod.rs  stats.rs  tree.rs
crates/zen-runs/: Cargo.toml
crates/zen-runs/src/: lib.rs
crates/zen-screen-vocab/: Cargo.toml  build.rs
crates/zen-screen-vocab/src/: cache.rs  extract.rs  lib.rs
crates/zen-screen-vocab/swift/: ScreenVocabBridge.swift
crates/zen-shell/: Cargo.toml
crates/zen-shell/src/: lib.rs
crates/zen-storage/: Cargo.toml
crates/zen-storage/src/: lib.rs
crates/zen-test-server/: Cargo.toml
crates/zen-test-server/src/: main.rs
crates/zen-types/: Cargo.toml
crates/zen-types/src/: environment.rs  error.rs  ids.rs  lib.rs  prelude.rs  request.rs  response.rs
crates/zen-whisper/: Cargo.toml  build.rs
crates/zen-whisper/src/: context.rs  error.rs  lib.rs
docker/mssql/: 01-init.sql  init.sh
docker/postgres/: 01-init.sql
docs/: IPC.md  STORAGE.md
examples/: api.http  api.perf.yaml  auth.http  extraction.http  http-client.env.json  mermaid-error-test.md  perf.variable.yaml  queries-mssql.sql  queries-postgres.sql  queries.sql
patches/ghostty/: 0001-build-macOS-26-CLT-15-SDK-Rust-FFI-consumer-patches.patch
src/: App.tsx  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: data_dir_migration.rs  dto.rs  error.rs  lib.rs  main.rs  prmaster_lifecycle.rs  prmaster_tray.rs  schema_cache.rs  state.rs  tray.rs  user_config.rs
src-tauri/src/commands/: cleaner.rs  database.rs  environment.rs  execute.rs  files.rs  git.rs  markdown.rs  markdown_index.rs  misc.rs  mod.rs  parse.rs  perf.rs  pr_review.rs  preferences.rs  prmaster.rs  process_monitor.rs  runs.rs  sql_workspace.rs
src-tauri/src/dictation/: commands.rs  dto.rs  hud.rs  install_id.rs  lifecycle.rs  menu_bar.rs  mod.rs  permissions.rs  state.rs  tray.rs
src/components/: drag-handle.tsx  theme-toggle.tsx  vim-toggle.tsx
src/components/app-shell/: app-providers.tsx  title-bar.tsx  tool-pill.tsx  working-dir-picker.tsx
src/components/code-editor/: code-editor.tsx  index.ts
src/components/ui/: button.tsx  checkbox.tsx  context-menu.tsx  input.tsx  label.tsx  scroll-area.tsx  select.tsx  switch.tsx  textarea.tsx
src/config/: tools.ts
src/hooks/: use-app-zoom.tsx  use-auto-save.ts  use-last-route.tsx  use-theme.tsx  use-tool-order.tsx  use-vim-mode.ts
src/lib/: preferences-key.ts  utils.ts  window-kind.ts
tools/ghostty-xcrun-shim/: xcrun
(+213 files in other folders)
