[workspace]
resolver = "2"
members = [
    "crates/zen-types",
    "crates/zen-parser",
    "crates/zen-http",
    "crates/zen-perf",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["zen-tools"]
rust-version = "1.78"

[workspace.dependencies]
# Async
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
futures = "0.3"
async-trait = "0.1"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "charset", "http2"] }

# Serde
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.9"

# Domain
regex = "1.11"
urlencoding = "2"
jsonpath-rust = "0.7"
petgraph = "0.6"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hdrhistogram = "7"
humantime-serde = "1"

# Performance helpers
ahash = "0.8"
parking_lot = "0.12"
arc-swap = "1.7"
once_cell = "1.20"

# Errors / logging / utility
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dirs = "5"

# Internal crates
zen-types = { path = "crates/zen-types" }
zen-parser = { path = "crates/zen-parser" }
zen-http = { path = "crates/zen-http" }
zen-perf = { path = "crates/zen-perf" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
debug = "line-tables-only"
