[workspace]
resolver = "2"
members = [
    "crates/zen-types",
    "crates/zen-fs",
    "crates/zen-storage",
    "crates/zen-runs",
    "crates/zen-parser",
    "crates/zen-http",
    "crates/zen-perf",
    "crates/zen-process-monitor",
    "crates/zen-cleaner",
    "crates/zen-db",
    "crates/zen-shell",
    "crates/zen-github",
    "crates/zen-ai-cli",
    "crates/zen-prmaster",
    "crates/zen-whisper",
    "crates/zen-apple-speech",
    "crates/zen-screen-vocab",
    "crates/zen-dictation",
    # Native terminal stack (macOS-only at link time, but the manifests
    # build on every platform — the macOS-only deps are gated inside
    # tauri-plugin-ghostty's own `Cargo.toml` via
    # `[target.'cfg(target_os = "macos")'.dependencies]`).
    "crates/ghostty-sys",
    "crates/ghostty-rs",
    "crates/tauri-plugin-ghostty",
    "src-tauri",
]
# zen-test-server is a standalone dev tool. It has its own [workspace] and is
# built explicitly via `cargo run --manifest-path crates/zen-test-server/Cargo.toml`.
exclude = ["crates/zen-test-server"]

[workspace.package]
version = "0.1.37"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["zen-tools"]
rust-version = "1.78"

[workspace.dependencies]
# Async
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
futures = "0.3"
async-trait = "0.1"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "charset", "http2"] }

# Serde
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.9"

# Domain
regex = "1.11"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
humantime-serde = "1"

# Performance helpers
ahash = "0.8"
parking_lot = "0.12"
once_cell = "1.20"

# Errors / logging / utility
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Daily-rotating file appender used by `src-tauri/src/lib.rs` to mirror
# tracing output to `<app_data_dir>/logs/zen-tools.log`. Stdout writer is
# kept too via a fmt-layer fanout.
tracing-appender = "0.2"
dirs = "5"

# Local dictation (whisper.cpp + microphone capture). cpal is a
# cross-platform audio I/O library; rubato is a high-quality sinc
# resampler used to drop microphone input down to the 16 kHz f32 mono
# whisper.cpp expects.
cpal = "0.15"
rubato = "0.16"
sha2 = "0.10"

# TypeScript binding generation. We derive `TS` on every wire DTO that
# crosses the IPC boundary; `cargo test export_bindings` then emits a
# `.ts` file per type into `packages/types/src/generated/`. Frontend
# consumes them via `@zen-tools/types/generated`.
#
# Has to live in `[dependencies]` (not dev-only) on every crate that
# uses `#[derive(TS)]` because the derive macro expands at *every*
# compile to `impl ts_rs::TS for …`. The runtime impact is one trait
# impl per type and ts-rs itself has no transitive deps that aren't
# already in the lock — so the cost is essentially zero.
ts-rs = { version = "12", features = ["chrono-impl", "no-serde-warnings"] }

# Internal crates
zen-types = { path = "crates/zen-types" }
zen-fs = { path = "crates/zen-fs" }
zen-storage = { path = "crates/zen-storage" }
zen-runs = { path = "crates/zen-runs" }
zen-parser = { path = "crates/zen-parser" }
zen-http = { path = "crates/zen-http" }
zen-perf = { path = "crates/zen-perf" }
zen-process-monitor = { path = "crates/zen-process-monitor" }
zen-cleaner = { path = "crates/zen-cleaner" }
zen-db = { path = "crates/zen-db" }
zen-shell = { path = "crates/zen-shell" }
zen-github = { path = "crates/zen-github" }
zen-ai-cli = { path = "crates/zen-ai-cli" }
zen-prmaster = { path = "crates/zen-prmaster" }
zen-whisper = { path = "crates/zen-whisper" }
zen-apple-speech = { path = "crates/zen-apple-speech" }
zen-screen-vocab = { path = "crates/zen-screen-vocab" }
zen-dictation = { path = "crates/zen-dictation" }

# zen-prmaster / zen-github
globset = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
debug = "line-tables-only"
