[package]
name = "zen-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Zen Tools — modular developer tooling on Tauri."
default-run = "zen-tools"

[lib]
name = "zen_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
zen-types = { workspace = true }
zen-parser = { workspace = true }
zen-http = { workspace = true }
zen-perf = { workspace = true }
zen-process-monitor = { workspace = true }
zen-cleaner = { workspace = true }

tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
ahash = { workspace = true }
rayon = "1.10"
trash = "5"
regex = { workspace = true }
globset = "0.4"
# Server-side SVG rasterisation for "Copy as PNG" on mermaid widgets —
# WKWebView taints any canvas an SVG <img> is drawn into, so we keep
# the raster path entirely on the Rust side.
resvg = { version = "0.45", default-features = false, features = ["text", "system-fonts"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
