[package]
name = "zen-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Zen Tools — modular developer tooling on Tauri."
default-run = "zen-tools"

[lib]
name = "zen_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
# Temp-directory helper for tests that exercise the on-disk migration
# path (`UserConfig::migrate_legacy`).
tempfile = "3"

[dependencies]
zen-types = { workspace = true }
zen-fs = { workspace = true }
zen-storage = { workspace = true }
zen-runs = { workspace = true }
zen-parser = { workspace = true }
zen-http = { workspace = true }
zen-perf = { workspace = true }
zen-process-monitor = { workspace = true }
zen-cleaner = { workspace = true }
zen-db = { workspace = true }
zen-github = { workspace = true }
zen-prmaster = { workspace = true }
# Note: zen-ai-cli + zen-shell are reached transitively through
# zen-prmaster / zen-github (no direct `use` in src-tauri/src/).

# `macos-private-api` is required so the `pm-popover` window can be
# spawned with `transparent: true` (paired with `app.macOSPrivateApi:
# true` in `tauri.conf.json`). Without it macOS refuses to compose the
# vibrancy / transparent NSWindow and Tauri logs `macos-private-api
# not enabled` at runtime.
tauri = { version = "2", features = [
    "tray-icon",
    "image-png",
    "protocol-asset",
    "macos-private-api",
] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
# In-app auto-update: queries the GitHub Releases endpoint configured in
# tauri.conf.json's `plugins.updater.endpoints` and verifies the .sig
# against `plugins.updater.pubkey`. The publishing side (artifacts +
# latest.json) is handled by `createUpdaterArtifacts: true` in the
# bundle config plus the release workflow's manifest step.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
ahash = { workspace = true }
rayon = "1.10"
trash = "5"
# Server-side SVG rasterisation for "Copy as PNG" on mermaid widgets —
# WKWebView taints any canvas an SVG <img> is drawn into, so we keep
# the raster path entirely on the Rust side.
resvg = { version = "0.45", default-features = false, features = ["text", "system-fonts"] }
# File-finder + grep SDK backing the markdown editor's search palette.
# Replaces our hand-rolled `regex` + `rayon` content search and the
# pure-TS `file-rank.ts` ranker.  Same crate flowstate uses; no
# default features (the `zlob` feature requires zig and isn't worth
# forcing into the toolchain).
#
# Build-time gotcha: fff-search 0.5.2's `build.rs` panics under
# `CI=true` even with `default-features = false`.  Our release
# workflow already strips `CI` for the cargo build step
# (`env -u CI`); see the comment in `.github/workflows/release.yml`.
# Local dev shells don't set `CI`, so this is a non-issue outside CI.
fff-search = "0.5.2"
# Path canonicalisation that doesn't rewrite into Windows
# extended-length form.  fff-search's notify-backed watcher emits
# events with non-extended paths and `strip_prefix`s them against the
# registered root; if we register a `\\?\C:\...` root every event
# would error out with `StripPrefixError`.  No-op on macOS / Linux,
# but cheap to keep so reinstating Windows is a matrix-row addition
# with no other code change.
dunce = "1.0"
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
# Local SQLite for the schema-cache (per-table column/index/FK metadata).
# `bundled` vendors the SQLite source so we don't depend on a system
# library — keeps Windows builds simple.
rusqlite = { version = "0.32", features = ["bundled"] }
