[package]
name = "zen-ai-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pluggable adapters for the `claude` and `copilot` CLI tools."

[lints.rust]
missing_docs = "warn"

[dependencies]
zen-shell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
