[package]
name = "zen-perf"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Load-testing engine, metrics, assertions, and CSV export."

[dependencies]
zen-types = { workspace = true }
zen-parser = { workspace = true }
zen-http = { workspace = true }
tokio = { workspace = true }
hdrhistogram = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
ahash = { workspace = true }
humantime-serde = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
