[package]
name = "zen-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared SQLite primitives for zen-tools — a SharedConnection helper that opens with the same WAL + NORMAL pragmas every consumer uses, plus a generic key/value JSON store."

[lints.rust]
missing_docs = "warn"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3"
