[package]
name = "zen-test-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Axum-based mock backend for trying out the example .http files."

[[bin]]
name = "zen-test-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
