[package]
name = "zen-test-server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["zen-tools"]
description = "Axum-based mock backend for trying out the example .http files. Standalone dev tool, not part of the main workspace build."

[[bin]]
name = "zen-test-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.9"

# Disconnect from any parent workspace so this builds standalone.
[workspace]
